<resources>
    <string name="app_name">ProyectoFinal</string>
    <!--LoginActivity-->
    <string name="img">img</string>
    <string name="login">INICIAR SESION</string>
    <string name="create_account">CREAR CUENTA</string>
    <string name="mail">Correo</string>
    <string name="password">Contraseña</string>
    <string name="app_version">VERSION 1.0</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="create_your_account">Crea tu cuenta</string>
    <string name="inf_create_account">Ingresa tu información para crear tu cuenta</string>
    <string name="name">Nombre</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CELSO LAS PALMAS</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_prom">Promocion scan</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_mapa">Mapa</string>

    <string name="boton_qr">Escanear</string>
</resources>